Add validation, exception handling and update SecurityConfiguration in user-service.